# Uni

./: .gitmodules
FifthSemester/FLCD/Lab1/: p1.rs  p2.rs  p3.rs
FifthSemester/FLCD/seminars/: quiz12.txt
FifthSemester/PKC/Lab1/: 1.py
FourthSemester/ArtificialIntelligence/lab6/: metrics.py
FourthSemester/SDI/lab2x-jarjarbinks-develop/: build.gradle
FourthSemester/SDI/lab5x-jarjarbinks-main/: .gitignore
FourthSemester/SDI/lab9x-alexpetrean80-main/: dockDockBuildParams.json
FourthSemester/WebProgramming/Assignment6/: index.html  main.js
FourthSemester/WebProgramming/Lab6/: index.html  style.css
FourthSemester/WebProgramming/Lab7/: index.html
FourthSemester/WebProgramming/LabWork7/: LabWork7  first_php.php
LFP/: theory-from-org.tex  theory.org  theory.tex  todo.org
SecondSemester/DataStructuresAndAlgorithms/Lab1/: App.cpp  CMakeLists.txt  ShortTest.cpp  (+2 more)
SecondSemester/ObjectOrientedProgramming/Lab6/: CMakeLists.txt  guardian_statue.h  repository.h  service.cpp  service.h  tests.h  ui.h
Sem2/GraphTheory/: Documentation.odt
Sem2/ObjectOrientedProgramming/Lab7/: CMakeLists.txt
Sem2/ObjectOrientedProgramming/Lab7/domain/: Exception.h  guardian_statue.cpp  guardian_statue.h
Sem2/ObjectOrientedProgramming/Lab7/repository/: file_repository.h
Sem2/ObjectOrientedProgramming/Lab7/service/: service.h
Sem2/ObjectOrientedProgramming/Lab7/tests/: tests_domain.cpp  tests_domain.h  tests_file_repository.h  tests_service.cpp
Sem2/ObjectOrientedProgramming/Lab7/ui/: ui.cpp  ui.h
Sem2/ObjectOrientedProgramming/Lab8/: .clang-format  CMakeLists.txt
Sem2/ObjectOrientedProgramming/Lab8/domain/: guardian_statue_validator.cpp
Sem2/ObjectOrientedProgramming/Lab8/repository/: repository.cpp  repository.h
Sem2/ObjectOrientedProgramming/Lab8/service/: service.cpp  service.h
Sem2/ObjectOrientedProgramming/Lab8/tests/: tests.cpp  tests.h  tests_domain.h  tests_service.cpp  tests_service.h
Sem2/ObjectOrientedProgramming/Lab8/ui/: ui.cpp
Sem3/Databases/: drop_procedures.sql  lab1.sql  lab2.sql
ThirdSemester/Databases/: create_procedures.sql  lab3.sql
thesis/iron_kernel/: Cargo.toml
thesis/iron_kernel/src/: main.rs
(+1068 files in other folders)
